# Neural_Networks_in_Numpy

./: .gitignore  01_ComputerVision_Basics.ipynb  02_Perceptron.ipynb  03_Adaline.ipynb  03_FeedForwardNetwork.ipynb  04_XOR_Problem.ipynb  README.md  pyproject.toml
src/components/: activations.py  blocks.py  initializers.py  loss.py
src/helpers/: data_transforms.py  plot.py  plots.py
src/models/: perceptron.py
src/preprocessing/: data_transforms.py
src/utils/: load_data.py  plot.py
