[project]
name = "neural-networks-in-numpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
]
